--- a/TestExcel/Views/Data/Department.cshtml
+++ b/TestExcel/Views/Data/Department.cshtml
@@ -4,42 +4,119 @@
     ViewBag.Title = "Department";
     Layout = "~/Views/Shared/_TimeScheduleLayout.cshtml";
 }
+<h2>Department</h2>
+<br>
 <div class="w3-row w3-center fontup">
     @Html.ActionLink("แก้ไขข้อมูล", "Section", "Data", new { style = "color:blue;font-size:20px" })  |
 </div>
-<br>
-<h2>Department</h2>
-<br>
+<div class="container">
+    <a href="#" onclick="AddNew(0)" class="btn btn-info">Add New</a><br /><br />
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="w3-table-all" id="DataTable" name="DataTable">
-    <thead>
-        <tr class="w3-blue">
-            <th>ภาควิชา</th>
-            <th>ชื่อภาควิชา_ภาษาไทย</th>
-            <th>แก้ไข</th>
-            <th>ลบ</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @item.DEPARTMENT_NAME
-                </td>
-                <td>
-                    @item.DEPARTMENT_THAI_NAME
-                </td>
-                <td>
-                    <a href="@Url.Action("Edit","Edit",new { id = item.DEPARTMENT_ID })"><span class="btn btn-success fa fa-pencil"></span></a>
-                </td>
-                <td>
-                    <a onclick="return confirm('Are you sure you want to delete record with id = @item.DEPARTMENT_ID')" href="@Url.Action("Delete","Manage",new { id = item.DEPARTMENT_ID })"><span class="btn btn-danger fa fa-trash-o"></span></a>
-                </td>
+    <table class="w3-table-all" id="DataTable" name="DataTable">
+        <thead>
+            <tr class="w3-blue">
+                <th>ภาควิชา</th>
+                <th>ชื่อภาควิชา_ภาษาไทย</th>
+                <th>แก้ไข</th>
+                <th>ลบ</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td id="TdepartName_@item.DEPARTMENT_ID">
+                        @item.DEPARTMENT_NAME
+                    </td>
+                    <td id="TdepartThaiName_@item.DEPARTMENT_ID">
+                        @item.DEPARTMENT_THAI_NAME
+                    </td>
+                    <td>
+                        <a href="#" onclick="EditRecord(@item.DEPARTMENT_ID)"><span class="btn btn-success fa fa-pencil"></span></a>
+                    </td>
+                    <td>
+                        <a href="#" onclick="DeleteRecord(@item.DEPARTMENT_ID)"><span class="btn btn-danger fa fa-trash-o"></span></a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+<div class="modal fade" id="MyModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <a href="#" class="close" data-dismiss="modal">&times;</a>
+                <h4 id="ModalTitle"></h4>
+            </div>
+            <div class="modal-body">
+                <div id="form">
+                    @using (Html.BeginForm("SaveDepartment", "Data", FormMethod.Post))
+                    {
+                        <div class="form-group">
+                            @Html.Hidden("DEPARTMENT_ID", 0)
+                        </div>
+                        <div class="form-group">
+                            @Html.TextBox("DEPARTMENT_NAME", "", new { @class = "form-control", @placeholder = "DEPARTMENT_NAME" })
+                        </div>
+                        <div class="form-group">
+                            @Html.TextBox("DEPARTMENT_THAI_NAME", "", new { @class = "form-control", @placeholder = "DEPARTMENT_THAI_NAME" })
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Save" href="#" class="btn btn-block btn-success">
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="DeleteConfirmation">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <a href="#" class="close" data-dismiss="modal">&times;</a>
+                <h4>Delete This Record</h4>
+            </div>
+            <div class="modal-body">
+                <h4>Are You Sure? You Want To Delete This Record.</h4>
+                <div class="modal-footer">
+                    @using (Html.BeginForm("DeleteDepartment", "Data", FormMethod.Post))
+                    {
+                        @Html.Hidden("Del_DEPARTMENT_ID", "")
+                        <a href="#" class="btn btn-primary" data-dismiss="modal">Cancle</a>
+                        <input type="submit" value="Delete" href="#" class="btn btn-danger">
+                    }
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    //Show The Popup Modal
+    function AddNew(DEPARTMENT_ID) {
+        $("#DEPARTMENT_ID").val(0);
+        $("#DEPARTMENT_NAME").val("");
+        $("#DEPARTMENT_THAI_NAME").val("");
+        $("#ModalTitle").html("Add New Department");
+        $("#MyModal").modal();
+    }
+    function EditRecord(DEPARTMENT_ID) {
+        $("#DEPARTMENT_ID").val(DEPARTMENT_ID);
+        $("#DEPARTMENT_NAME").val($("#TdepartName_" + DEPARTMENT_ID).html().trim());
+        $("#DEPARTMENT_THAI_NAME").val($("#TdepartThaiName_" + DEPARTMENT_ID).html().trim());
+        $("#ModalTitle").html("Update Department Record");
+        $("#MyModal").modal();
+    }
+    function DeleteRecord(DEPARTMENT_ID) {
+        $("#Del_DEPARTMENT_ID").val(DEPARTMENT_ID);
+        $("#DeleteConfirmation").modal("show");
+    }
+    $('#DataTable').DataTable({
+        "pagingType": "full_numbers",
+        "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "All"]]
+    });
+</script>
