--- a/TestExcel/Views/Data/Professor.cshtml
+++ b/TestExcel/Views/Data/Professor.cshtml
@@ -4,53 +4,147 @@
     ViewBag.Title = "Professor";
     Layout = "~/Views/Shared/_TimeScheduleLayout.cshtml";
 }
-<div class="w3-row w3-center fontup">
-@Html.ActionLink("แก้ไขข้อมูล", "Section", "Data", new { style = "color:blue;font-size:20px" })  |
-</div>
-<br>
 <h2>Professor</h2>
 <br>
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="w3-table-all" id="DataTable" name="DataTable">
-    <thead>
-        <tr class="w3-blue">
-            <th>ชื่อจริง</th>
-            <th>นามสกุล</th>
-            <th>อักษรย่ออาจารย์</th>
-            <th>สถานะอาจารย์</th>
-            <th>ภาควิชา</th>
-            <th>แก้ไข</th>
-            <th>ลบ</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @item.PROFESSOR_FIRSTNAME
-                </td>
-                <td>
-                    @item.PROFESSOR_LASTNAME
-                </td>
-                <td>
-                    @item.PROFESSOR_SHORTNAME
-                </td>
-                <td>
-                    @item.PROFESSOR_STATUS
-                </td>
-                <td>
-                    @item.DEPARTMENT_NAME
-                </td>
-                <td>
-                    <a href="@Url.Action("Edit","Edit",new { id = item.PROFESSOR_ID })"><span class="btn btn-success fa fa-pencil"></span></a>
-                </td>
-                <td>
-                    <a onclick="return confirm('Are you sure you want to delete record with id = @item.PROFESSOR_ID')" href="@Url.Action("Delete","Manage",new { id = item.PROFESSOR_ID })"><span class="btn btn-danger fa fa-trash-o"></span></a>
-                </td>
+<div class="w3-row w3-center fontup">
+    @Html.ActionLink("แก้ไขข้อมูล", "Section", "Data", new { style = "color:blue;font-size:20px" })  |
+</div>
+<div class="container">
+    <a href="#" onclick="AddNew(0)" class="btn btn-info">Add New</a><br /><br />
+
+    <table class="w3-table-all" id="DataTable" name="DataTable">
+        <thead>
+            <tr class="w3-blue">
+                <th>ชื่อจริง</th>
+                <th>นามสกุล</th>
+                <th>อักษรย่ออาจารย์</th>
+                <th>สถานะอาจารย์</th>
+                <th>ภาควิชา</th>
+                <th>แก้ไข</th>
+                <th>ลบ</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td id="TprofessorFirstName_@item.PROFESSOR_ID">
+                        @item.PROFESSOR_FIRSTNAME
+                    </td>
+                    <td id="TprofessorLastName_@item.PROFESSOR_ID">
+                        @item.PROFESSOR_LASTNAME
+                    </td>
+                    <td id="TprofessorShortName_@item.PROFESSOR_ID">
+                        @item.PROFESSOR_SHORTNAME
+                    </td>
+                    <td id="TprofessorStatus_@item.PROFESSOR_ID">
+                        @item.PROFESSOR_STATUS
+                    </td>
+                    <td id="TdepartName_@item.PROFESSOR_ID">
+                        @item.DEPARTMENT_NAME
+                    </td>
+                    <td>
+                        <a href="#" onclick="EditRecord(@item.PROFESSOR_ID)"><span class="btn btn-success fa fa-pencil"></span></a>
+                    </td>
+                    <td>
+                        <a href="#" onclick="DeleteRecord(@item.PROFESSOR_ID)"><span class="btn btn-danger fa fa-trash-o"></span></a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+
+<div class="modal fade" id="MyModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <a href="#" class="close" data-dismiss="modal">&times;</a>
+                <h4 id="ModalTitle"></h4>
+            </div>
+            <div class="modal-body">
+                <div id="form">
+                    @using (Html.BeginForm("SaveDepartment", "Data", FormMethod.Post))
+                    {
+                        <div class="form-group">
+                            @Html.Hidden("PROFESSOR_ID", 0)
+                        </div>
+                        <div class="form-group">
+                            @Html.TextBox("PROFESSOR_FIRSTNAME", "", new { @class = "form-control", @placeholder = "PROFESSOR_FIRSTNAME" })
+                        </div>
+                        <div class="form-group">
+                            @Html.TextBox("PROFESSOR_LASTNAME", "", new { @class = "form-control", @placeholder = "PROFESSOR_LASTNAME" })
+                        </div>
+                        <div class="form-group">
+                            @Html.TextBox("PROFESSOR_SHORTNAME", "", new { @class = "form-control", @placeholder = "PROFESSOR_SHORTNAME" })
+                        </div>
+                        <div class="form-group">
+                            @Html.TextBox("PROFESSOR_STATUS", "", new { @class = "form-control", @placeholder = "PROFESSOR_STATUS" })
+                        </div>
+                        <div class="form-group">
+                            @Html.TextBox("DEPARTMENT_NAME", "", new { @class = "form-control", @placeholder = "DEPARTMENT_NAME" })
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Save" href="#" class="btn btn-block btn-success">
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="DeleteConfirmation">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <a href="#" class="close" data-dismiss="modal">&times;</a>
+                <h4>Delete This Record</h4>
+            </div>
+            <div class="modal-body">
+                <h4>Are You Sure? You Want To Delete This Record.</h4>
+                <div class="modal-footer">
+                    @using (Html.BeginForm("DeleteDepartment", "Data", FormMethod.Post))
+                    {
+                        @Html.Hidden("Del_DEPARTMENT_ID", "")
+                        <a href="#" class="btn btn-primary" data-dismiss="modal">Cancle</a>
+                        <input type="submit" value="Delete" href="#" class="btn btn-danger">
+                    }
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    //Show The Popup Modal
+    function AddNew(PROFESSOR_ID) {
+        $("#DEPARTMENT_ID").val(0);
+        $("#PROFESSOR_FIRSTNAME").val("");
+        $("#PROFESSOR_LASTNAME").val("");
+        $("#PROFESSOR_SHORTNAME").val("");
+        $("#PROFESSOR_STATUS").val("");
+        $("#DEPARTMENT_NAME").val("");
+        $("#ModalTitle").html("Add New Professor");
+        $("#MyModal").modal();
+    }
+    function EditRecord(PROFESSOR_ID) {
+        $("#DEPARTMENT_ID").val(PROFESSOR_ID);
+        $("#PROFESSOR_FIRSTNAME").val($("#TprofessorFirstName_" + PROFESSOR_ID).html().trim());
+        $("#PROFESSOR_LASTNAME").val($("#TprofessorLastName_" + PROFESSOR_ID).html().trim());
+        $("#PROFESSOR_SHORTNAME").val($("#TprofessorShortName_" + PROFESSOR_ID).html().trim());
+        $("#PROFESSOR_STATUS").val($("#TprofessorStatus_" + PROFESSOR_ID).html().trim());
+        $("#DEPARTMENT_NAME").val($("#TdepartName_" + PROFESSOR_ID).html().trim());
+        $("#ModalTitle").html("Update Professor Record");
+        $("#MyModal").modal();
+    }
+    function DeleteRecord(PROFESSOR_ID) {
+        $("#Del_DEPARTMENT_ID").val(PROFESSOR_ID);
+        $("#DeleteConfirmation").modal("show");
+    }
+    $('#DataTable').DataTable({
+        "pagingType": "full_numbers",
+        "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "All"]]
+    });
+</script>
