--- a/TestExcel/Views/Shared/_TimeScheduleLayout.cshtml
+++ b/TestExcel/Views/Shared/_TimeScheduleLayout.cshtml
@@ -7,7 +7,9 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
-
+    <script src="~/Scripts/DataTables/jquery.dataTables.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
     @{
